# kadmon

./: .gitignore  AGENTS.md  LICENSE  README.md  dev  publish  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: autonomous-context-plan.md
docs/design/: competitive-analysis.md  library-team.md  session-persistence.md
docs/design/p0/: agents-md.md  checkpoints.md  parallel-workers.md  path-scoped-rules.md
docs/design/p1/: confidence-gated-actions.md  handoff-refinement.md  qa-loop.md  workflow-discipline.md
docs/handoffs/: latest.md
kadmon/: __main__.py  checkpoints.py  cli.py  cli_display.py  config.py  conversation.py  qa.py  workers.py
kadmon/agent/: __init__.py  backtrack.py  checkpoint.py  context.py  handoff.py  loop.py  planner.py  prompts.py  pruner.py  recovery.py
kadmon/eval/: __init__.py  harness.py  polyglot.py
kadmon/human/: __init__.py  channel.py
kadmon/index/: __init__.py  db.py  parser.py  updater.py
kadmon/memory/: __init__.py  central_index.py  librarian.py  library_cache.py  read_cache.py  session_log.py  session_tracker.py  token_tracker.py
kadmon/memory/agents/: __init__.py  curator_agent.py  handoff_agent.py  index_agent.py  prune_agent.py  read_agent.py  write_agent.py
kadmon/providers/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py  openai_provider.py
kadmon/tools/: __init__.py  ask_human.py  base.py  checkpoint.py  file_io.py  library.py  parallel.py  plan.py  references.py  search.py  shell.py  skeleton.py  submit.py  verify.py
npm/: README.md  package.json  requirements.txt
tests/: test_agent.py  test_agents_md.py  test_central_index.py  test_checkpoints.py  test_curator.py  test_eval.py  test_handoff.py  test_handoff_agent.py  test_human.py  test_library.py  test_memory.py  test_p0_features.py  test_phase2.py  test_phase3.py  test_planning.py  test_pruner.py  test_read_cache.py  test_recovery.py  test_references.py  test_session_log.py  test_skeleton.py  test_status_cmd.py  test_tools.py  test_verification.py
