[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kadmon"
version = "0.6.3"
description = "An autonomous coding agent that manages its own context across sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ayuan153" },
]
keywords = ["ai", "agent", "coding", "llm", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "boto3>=1.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ayuan153/kadmon"
Repository = "https://github.com/ayuan153/kadmon"
Issues = "https://github.com/ayuan153/kadmon/issues"

[project.scripts]
kadmon = "kadmon.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
